# Deep-Learning

./: .gitignore  .gitmodules  Makefile  Operations.md  README.md  Roadmap.md  projects.md  pyproject.toml  requirements.txt
01_Gridworld_Agent/: README.md  environement.py  environment.py  q_learning.py
Deep-reinforcement-learning/: README.md
Deep-reinforcement-learning/01_Gridworld_Agent/: main.py
Deep-reinforcement-learning/02_Classic_Control/cartpole/: cartpole.py
courses/: index.html
courses/course/: Q-learning.html  applications.html  deep-q-learning.html
courses/course/applications/: gridworld.html
courses/static/: applications.css  applications.js  deep-q-learning.css  deep-q-learning.js  drl-course-css.css
docs/: info.md
linear-algebra/: main.py
linear-algebra/array/: __init__.py  array.py  test
python/: Python-Class-Decorators.md  python-Dunder-Methods.md  python-advanced-course.md
